--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
+    "fabric": "^6.7.1",
     "framer-motion": "^12.23.22",
     "fuse.js": "^7.1.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "papaparse": "^5.5.2",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.149",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
